# launcher-qt

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp  mainwindow.cpp  mainwindow.h  mylineedit.cpp  mylineedit.h  pluginworker.cpp  pluginworker.h  proposal.h  proposal.h~  resultwidget.cpp  resultwidget.h  singleapplication.cpp  singleapplication.h  util.cpp  util.h
Plugins/: CMakeLists.txt  applications.cpp  applications.cpp~  applications.h  genericworker.cpp  genericworker.h  plugin.cpp  plugin.h  qutebrowser.cpp  qutebrowser.h  terminal.h  test.h
lib/: CMakeLists.txt
lib/easylogging++/: CMakeLists.txt
lib/globalshortcut/: CMakeLists.txt
